--- a/app/static/sass/index.scss
+++ b/app/static/sass/index.scss
@@ -13,3 +13,10 @@ ul {
         background: #000;
     }
 }
+
+#item {
+    width: 200px;
+    height: 100px;
+    background-color: #999;
+    cursor: pointer;
+}
