--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../dist/css/index.css">
+    <script src='../dist/js/jquery-1.12.1.js'></script>
+    <script src='../dist/js/index.js'></script>
 </head>
 
 <body>
@@ -19,6 +21,11 @@
         <li>1</li>
         <li>1</li>
     </ul>
+    <div>
+        <p id="item"></p>
+        <img src="../dist/img/h.png">
+        <img src="../dist/img/c.png">
+    </div>
 
 </body>
 
