--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../dist/css/index.css">
-    <script src='../dist/js/jquery-1.12.1.js'></script>
-    <script src='../dist/js/index.js'></script>
+
 </head>
 
 <body>
@@ -30,3 +29,18 @@
 </body>
 
 </html>
+<!--<script>
+    var t = $('#item');
+
+
+
+    // alert(t);
+    console.log(t);
+
+
+    $('#item').click(function() {
+        alert(t);
+    });
+</script>-->
+<script src='../dist/js/jquery-1.12.1.js'></script>
+<script src='../dist/js/index.js'></script>
